updated the 'about me' write up

--- a/index.html
+++ b/index.html
@@ -45,8 +45,16 @@
             <img src="./images/WhatsApp Image 2022-05-13 at 17.42.19.jpeg" alt="">
             <div id="intro">
                 <h2>MAYE JESUOROBO</h2>
-                <P>I'm a frequent traveler who loves puzzles, sewing, crocheting and knitting. When I'm not doing those fun things, I'm a conscientious full stack software developer, skillfully able to problem solve while maintaining the vision of the end-product. Proven track record of developing, testing and executing full stack web applications. I enjoy learning new languages and working in awesome teams on projects. I am looking to bring my unique
-                skill set to a tech company with global reach.</P>
+                <p>
+                    I am a full-stack software developer with a passion for problem-solving and a keen eye for detail. In my free time, you
+                    can find me traveling the world, spending time with my family or indulging in my hobbies like puzzles, sewing,
+                    crocheting, and knitting. My professional experience includes a proven track record of developing, testing, and
+                    deploying full-stack web applications. I am always eager to learn new languages and technologies, and I thrive in
+                    collaborative environments where I can work with a team of like-minded individuals to bring projects to life. I have a
+                    background in Microbiology and I am excited to bring my unique skill set to a tech company with global reach.
+                </p>
+                <!-- <P>I'm a frequent traveler who loves puzzles, sewing, crocheting and knitting. When I'm not doing those fun things, I'm a conscientious full stack software developer, skillfully able to problem solve while maintaining the vision of the end-product. Proven track record of developing, testing and executing full stack web applications. I enjoy learning new languages and working in awesome teams on projects. I am looking to bring my unique
+                skill set to a tech company with global reach.</P> -->
             </div>
         </div>
     </section>
