added target='_blank' to the href of the project links

--- a/index.html
+++ b/index.html
@@ -65,24 +65,24 @@
         <h1 class="headings">PORTFOLIO</h1>
         <div class="gallery">
             <!-- 6 images needed -->
-            <a href="">
+            <a href="" target="_blank">
                 <img src="./images/pexels-rajesh-tp-1624487.jpg" alt="">
             </a>
-            <a href="">
+            <a href="" target="_blank">
                 <img src="./images/pexels-max-vakhtbovych-8082321.jpg" alt="">
             </a>
-            <a href="">
+            <a href="" target="_blank">
                 <img src="./images/pexels-lisa-fotios-1855214.jpg" alt="">
             </a>
-            <a href="https://monumental-kheer-1078fc.netlify.app">
+            <a href="https://monumental-kheer-1078fc.netlify.app" target="_blank">
                 <img src="./images/Screen Shot 2023-01-03 at 10.46.17 AM.png" alt="">
                 <!-- <p>Vegetarian cheker: Input an edible item barcode to see if it contains Vegetarian ingredients or not</p> -->
             </a>
-            <a href="">
+            <a href="" target="_blank">
                 <img src="./images/Screen Shot 2023-01-03 at 11.02.25 AM.png" alt="">
                 <!-- <p>Dog Api: See different breeds of dogs and info about them</p> -->
             </a>
-            <a href="https://freemigrationproject.org/our-work/">
+            <a href="https://freemigrationproject.org/our-work/" target="_blank">
                 <img src="./images/Screen Shot 2023-01-17 at 9.58.24 PM.png" alt="">
             </a>
             <!-- <a href=""></a> -->
