--- a/index.html
+++ b/index.html
@@ -71,19 +71,19 @@
             <a href="" target="_blank">
                 <img src="./images/pexels-max-vakhtbovych-8082321.jpg" alt="">
             </a>
-            <a href="" target="_blank">
-                <img src="./images/pexels-lisa-fotios-1855214.jpg" alt="">
+            <a href="https://codinglady22.github.io/brews-coffee/ph" target="_blank">
+                <img src="./images/Screen Shot 2023-02-01 at 4.26.07 PM.png" alt="image of a coffee shop website">
             </a>
             <a href="https://monumental-kheer-1078fc.netlify.app" target="_blank">
-                <img src="./images/Screen Shot 2023-01-03 at 10.46.17 AM.png" alt="">
+                <img src="./images/Screen Shot 2023-01-03 at 10.46.17 AM.png" alt="image of a app that checks if a food product is vegetarian">
                 <!-- <p>Vegetarian cheker: Input an edible item barcode to see if it contains Vegetarian ingredients or not</p> -->
             </a>
             <a href="" target="_blank">
-                <img src="./images/Screen Shot 2023-01-03 at 11.02.25 AM.png" alt="">
+                <img src="./images/Screen Shot 2023-01-03 at 11.02.25 AM.png" alt="image of a application for checking dog info">
                 <!-- <p>Dog Api: See different breeds of dogs and info about them</p> -->
             </a>
             <a href="https://freemigrationproject.org/our-work/" target="_blank">
-                <img src="./images/Screen Shot 2023-01-17 at 9.58.24 PM.png" alt="">
+                <img src="./images/Screen Shot 2023-01-17 at 9.58.24 PM.png" alt="image of a website that supports free migration">
             </a>
             <!-- <a href=""></a> -->
         </div>
