corrected the link for the coffee shop

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <img src="./images/Screen Shot 2023-02-10 at 7.56.21 PM.png" alt="image of a application for checking dog info">
                 <p>Cocktail Api</p>
             </a>
-            <a href="https://codinglady22.github.io/brews-coffee/ph" target="_blank">
+            <a href="https://codinglady22.github.io/brews-coffee/" target="_blank">
                 <img src="./images/Screen Shot 2023-02-01 at 4.26.07 PM.png" alt="image of a coffee shop website">
                 <p>Coffee Shop</p>
             </a>
