added an image for the food checker app

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <img src="./images/pexels-max-vakhtbovych-8082321.jpg" alt="">
             </a>
             <a href="https://codinglady22.github.io/Cocktails/" target="_blank">
-                <img src="./images/Screen Shot 2023-02-10 at 7.56.21 PM.png" alt="image of a application for checking dog info">
+                <img src="./images/Screen Shot 2023-02-10 at 7.56.21 PM.png" alt="image of a application for checking cocktail recipes">
                 <p>Cocktail Api</p>
             </a>
             <a href="https://codinglady22.github.io/brews-coffee/" target="_blank">
@@ -80,7 +80,7 @@
                 <p>Coffee Shop</p>
             </a>
             <a href="https://monumental-kheer-1078fc.netlify.app" target="_blank">
-                <img src="./images/Screen Shot 2023-01-03 at 10.46.17 AM.png" alt="image of a app that checks if a food product is vegetarian">
+                <img src="./images/Screen Shot 2023-02-17 at 4.27.13 PM.png" alt="image of a app that checks if a food product is vegetarian">
                 <p>Food Checker</p>
             </a>
             <a href="https://freemigrationproject.org/our-work/" target="_blank">
