took out irrelevant images, added relevant images and took out the paragraphs in the links

--- a/index.html
+++ b/index.html
@@ -65,27 +65,27 @@
         <h1 class="headings">PORTFOLIO</h1>
         <div class="gallery">
             <!-- 6 images needed -->
-            <a href="" target="_blank">
+            <!-- <a href="" target="_blank">
                 <img src="./images/pexels-rajesh-tp-1624487.jpg" alt="">
-            </a>
-            <a href="" target="_blank">
-                <img src="./images/pexels-max-vakhtbovych-8082321.jpg" alt="">
+            </a> -->
+            <a href="https://codinglady22.github.io/Simple-React-movie-searcher/" target="_blank">
+                <img src="./images/Screen Shot 2023-02-27 at 6.03.36 PM.png" alt="">
             </a>
             <a href="https://codinglady22.github.io/Cocktails/" target="_blank">
                 <img src="./images/Screen Shot 2023-02-10 at 7.56.21 PM.png" alt="image of a application for checking cocktail recipes">
-                <p>Cocktail Api</p>
+                <!-- <p>Cocktail Api</p> -->
             </a>
             <a href="https://codinglady22.github.io/brews-coffee/" target="_blank">
                 <img src="./images/Screen Shot 2023-02-01 at 4.26.07 PM.png" alt="image of a coffee shop website">
-                <p>Coffee Shop</p>
+                <!-- <p>Coffee Shop</p> -->
             </a>
             <a href="https://monumental-kheer-1078fc.netlify.app" target="_blank">
                 <img src="./images/Screen Shot 2023-02-17 at 4.27.13 PM.png" alt="image of a app that checks if a food product is vegetarian">
-                <p>Food Checker</p>
+                <!-- <p>Food Checker</p> -->
             </a>
             <a href="https://freemigrationproject.org/our-work/" target="_blank">
                 <img src="./images/Screen Shot 2023-02-17 at 4.38.20 PM.png" alt="image of a website that supports free migration">
-                <p>Free Migration Project</p>
+                <!-- <p>Free Migration Project</p> -->
             </a>
             <!-- <a href=""></a> -->
         </div>
